envoy.yaml

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8081

static_resources:
  listeners:
    - name: listener_8080
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: route_httpbin
                  virtual_hosts:
                    - name: vh_httpbin
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/healthz"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "OKAY COOK\n"
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster_httpbin
                            auto_host_rewrite: true
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": "type.googleapis.com/google.protobuf.StringValue"
                            value: |
                              {
                                "component_name": "cookie-delete-filter",
                                "cookie_names": ["remove-me-2", "and-this-2"]
                              }
                          name: "cookie-delete-filter"
                          vm_config:
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "target/wasm32-unknown-unknown/release/cookie_delete_filter.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: cluster_httpbin
      connect_timeout: 2s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
